Regression: Unable to select bones with custom shape and custom shape transform override, while shape display is turned off #99364

Closed
opened 2022-07-03 19:55:52 +02:00 by Anon · 7 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c3b

Short description of error
I'm unable to select a bone, that has a custom shape and uses another bone for custom shape transform if I turn off shapes display for the armature (or it's very hard, depending on where the custom shape transform bone is located at).

Exact steps for others to reproduce the error
From a new startup file:

  • Press {key G X 3 Enter} to move the default Cube
  • Press {key Shift A} and add an Armature
  • Select the Armature and enter edit mode, there duplicate the Bone and move it up by 2 {key Shift D Z 2 Enter}
  • Enter pose mode, select the original Bone and set Cube as its Custom Object under Custom Shape, then set the duplicated Bone.001 as its Override Transform
  • Turn off Shapes display under Viewport Display for the Armature
  • Deselect all {key Alt A}, then try selecting the original Bone

Test file:
#99364.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c3b` **Short description of error** I'm unable to select a bone, that has a custom shape and uses another bone for custom shape transform if I turn off shapes display for the armature (or it's very hard, depending on where the custom shape transform bone is located at). **Exact steps for others to reproduce the error** From a new startup file: - Press {key G X 3 Enter} to move the default **Cube** - Press {key Shift A} and add an **Armature** - Select the **Armature** and enter edit mode, there duplicate the **Bone** and move it up by 2 {key Shift D Z 2 Enter} - Enter pose mode, select the original **Bone** and set **Cube** as its **Custom Object** under Custom Shape, then set the duplicated **Bone.001** as its **Override Transform** - Turn off Shapes display under Viewport Display for the Armature - Deselect all {key Alt A}, then try selecting the original **Bone** Test file: [#99364.blend](https://archive.blender.org/developer/F13256540/T99364.blend)
Author

Added subscriber: @vf986425

Added subscriber: @vf986425
Member

Added subscribers: @ideasman42, @PratikPB2123

Added subscribers: @ideasman42, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. Can confirm. Like #99270 I think this issue is also introduced with 3267c91b4d
@ideasman42 , can you check?

(Came between 48fbf0baea88 - 2887df119c3b)

Thanks for the report. Can confirm. Like #99270 I think this issue is also introduced with 3267c91b4d @ideasman42 , can you check? (Came between `48fbf0baea88` - `2887df119c3b`)
Pratik Borhade changed title from Unable to select bones with custom shape and custom shape transform override, while shape display is turned off to Regression: Unable to select bones with custom shape and custom shape transform override, while shape display is turned off 2022-07-04 05:45:10 +02:00

This issue was referenced by 8116d46025

This issue was referenced by 8116d460255c46590d7893ad21a9ae655da4ce56

This issue was referenced by b98a937db6

This issue was referenced by b98a937db64c365de889adcc084248716607521d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-07-08 03:34:28 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99364
No description provided.